--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,15 +2,15 @@
     "env": {
         "browser": true,
         "commonjs": true,
-        "es2021": true
+        "es2021": true,
+        "node": true
     },
     "extends": [
-        "airbnb-base"
+        "standard"
     ],
     "parserOptions": {
         "ecmaVersion": 12
     },
     "rules": {
-        "no-console": "off"
     }
 }
