--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^7.25.0",
+    "eslint": "^7.29.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
