--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/server.js",
-    "lint": "eslint ./src"
+    "start-dev": "nodemon ./src/server.js",
+    "start-prod": "NODE_ENV=production node ./src/server.js",
+    "lint": "eslint ./src",
+    "migrate": "node-pg-migrate"
   },
   "author": "",
   "license": "ISC",
@@ -22,7 +24,10 @@
   },
   "dependencies": {
     "@hapi/hapi": "^20.1.2",
+    "dotenv": "^10.0.0",
     "joi": "^17.4.0",
-    "nanoid": "^3.1.22"
+    "nanoid": "^3.1.22",
+    "node-pg-migrate": "^5.9.0",
+    "pg": "^8.6.0"
   }
 }
